# caldata-legislation-tracker

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  .sqlfluff  .yamllint  CLAUDE.md  LICENSE  README.md  ca-leginfo-bulk-download.md  ca-leginfo-summary.md  databricks.yml  mkdocs.yml  pyproject.toml
.github/workflows/: bundle-validate.yml  docs.yml  pre-commit.yml
docs/: index.md  setup.md
resources/: legislation.job.yml  legislation.pipeline.yml
src/: README.md
src/ingest/: README.md
src/publish/: README.md
src/transform/: README.md
transform/: README.md  dbt_project.yml
transform/ci/: profiles.yml
transform/models/: overview.md
